Fix text align in responsiveness

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -81,6 +81,10 @@ p {
     flex-direction: column;
   }
 
+  .title {
+    text-align: center;
+  }
+
   .aboutImage {
     display: none;
   }
