--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -72,6 +72,11 @@
   }
 
   .content {
+    text-align: center;
     align-items: center;
+  }
+
+  .title {
+    text-align: center;
   }
 }
